syntax = "proto3";

package pb;

option go_package = "./pb";


message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message SignUpResponse {
    string name = 1;
    string email = 2;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    string name = 1;
    string email = 2;
}


service AuthService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc SignIn(SignInRequest) returns (SignInResponse);
}